# survivalStory

./: .gitignore  AI开发技术设计文档.md  AI提示词.md  README.md  Skill机制与渐进式披露设计草案.md  TODO.md  main.py  pyproject.toml  产品说明书.md
config/: agents.json  app.toml  openai.json.example
config/prompts/: system_prompt.md  user_prompt.md
docs/: README.md  产品说明书.md  需求规格说明书.md
docs/v1/: AI架构优化设计文档.md  RuleBot+LLM输入优化设计文档.md  todo.md  产品说明书.md  实施计划.md  技术设计文档.md  技术选型清单.md  游戏页前端技术详细设计.md  游戏页通信与战利品流程优化方案.md  需求规格说明书.md
docs/v2/: 演进规划说明书.md
game/: broker_server.py  cli.py  constants.py  engine.py  lobby.py  models.py  net_client.py  net_host.py  room_host.py  rules.py  settings.py
game/agents/: openai_client.py  runtime.py
game/hotl/: service.py
game/memory/: service.py
game/store/: db.py
game/web/: game_client.html  host_server.html  lobby.html
src/ai/: __init__.py  agent_adapter.py  llm_policy.py  policy.py  rule_bot.py  skill_router.py
src/api/: app.py  constants.py  payload_validation.py  router_factory.py  schemas.py  ws_hub.py
src/application/: match_service.py  memory_service.py  notification_service.py  player_view_assembler.py  room_store.py  round_engine.py  round_scheduler.py
tests/: test_agent_adapter.py  test_ai_input_view.py  test_endgame_summary.py  test_event_sequence.py  test_llm_policy_mapping.py  test_match_service.py  test_payload_validation.py  test_resource_allocator.py  test_round_order.py  test_round_scheduler.py  test_rule_bot.py  test_rules.py  test_timeout_paths.py  test_trace_propagation.py
web/: game.html  lobby.html
(+26 files in other folders)
